name:                fltkhs-fluid-demos
version:             0.0.0.8
synopsis:            Fltkhs Fluid Demos
description:         Examples of using Fluid with FLTKHS
license:             MIT
license-file:        LICENSE
author:              Aditya Siram
build-type:          Custom
maintainer:          aditya.siram@gmail.com
homepage:            http://github.com/deech/fltkhs-fluid-demos
category:            UI,Graphics
cabal-version:       >=2.0
extra-source-files:  src/*.fl

source-repository head
  type: git
  location: http://github.com/deech/fltkhs-fluid-demos

custom-setup
  setup-depends:
      Cabal >= 3.2.0.0 && < 4
    , base >=4.4
    , filepath

Executable fltkhs-fluid-radio
  Main-Is: fluid-radio.hs
  Other-Modules: Radio
  Hs-Source-Dirs: src/
  Default-Extensions: FlexibleContexts, MonoLocalBinds
  Build-Depends:
    base >= 4.14 && < 5,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0
  build-tool-depends: fltkhs-fluidtohs:fltkhs-fluidtohs >= 0.1.0.0
  default-language: Haskell2010

Executable fltkhs-fluid-tabs
  Main-Is: fluid-tabs.hs
  Hs-Source-Dirs: src/
  Other-Modules: Tabs
  Build-Depends:
    base >= 4.14 && < 5,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0
  build-tool-depends: fltkhs-fluidtohs:fltkhs-fluidtohs >= 0.1.0.0
  default-language: Haskell2010

Executable fltkhs-fluid-valuators
  Main-Is: fluid-valuators.hs
  Other-Modules: Valuators
  Default-Extensions: FlexibleContexts, MonoLocalBinds
  Hs-Source-Dirs: src/
  Build-Depends:
    base >= 4.14 && < 5,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0
  build-tool-depends: fltkhs-fluidtohs:fltkhs-fluidtohs >= 0.1.0.0
  default-language: Haskell2010

Executable fltkhs-fluid-inactive
  Main-Is: fluid-inactive.hs
  Hs-Source-Dirs: src/
  Other-Modules: Inactive
  Build-Depends:
    base >= 4.14 && < 5,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0
  build-tool-depends: fltkhs-fluidtohs:fltkhs-fluidtohs >= 0.1.0.0
  default-language: Haskell2010

Executable fltkhs-fluid-fast-slow
  Main-Is: fluid-fast-slow.hs
  Other-Modules: FastSlow
  Hs-Source-Dirs: src/
  Build-Depends:
    base >= 4.14 && < 5,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0
  build-tool-depends: fltkhs-fluidtohs:fltkhs-fluidtohs >= 0.1.0.0
  default-language: Haskell2010

Executable fltkhs-fluid-tree
  Main-Is: fluid-tree.hs
  Other-Modules: Tree, TreeCallbacks
  Hs-Source-Dirs: src/
  Build-Depends:
    base >= 4.14 && < 5,
    fltkhs >= 0.8.0.3,
    text >= 1.2.2.0,
    bytestring >= 0.10.10.0 && < 0.11
  build-tool-depends: fltkhs-fluidtohs:fltkhs-fluidtohs >= 0.1.0.0
  default-language: Haskell2010
