cabal-version:       >=2.0
name:                fltkhs-fluid-preprocessor
version:             0.1.0.0
synopsis:            Cabal preprocessor for FLTK Fluid files
license:             MIT
license-file:        LICENSE
author:              Aditya Siram
maintainer:          aditya.siram@gmail.com
copyright:           2020, Aditya Siram
build-type:          Simple

library
  exposed-modules: Distribution.Simple.PreProcess.Fluid
  other-modules: Paths_fltkhs_fluid_preprocessor
  hs-source-dirs: src
  build-depends:
      Cabal >= 3.2.0.0 && < 4
    , base >=4.14 && < 4.15
    , filepath
  default-language: Haskell2010
